# v4-Common_Foundation

./: .gitignore  .pylintrc  Activate_custom.py  Bootstrap.cmd  Bootstrap.sh  README.md  ScmHook_custom.py  ScmPlugins.py  Setup.cmd  Setup.sh  Setup_custom.py  __RepositoryId__  test_file.txt
Libraries/Python/Common_Foundation/: AutoSemVer.yaml  pyproject.toml
Libraries/Python/Common_Foundation/src/: __version__.py
Libraries/Python/Common_Foundation/src/Common_Foundation/: ContextlibEx.py  DynamicFunctions.py  DynamicPluginArchitecture.py  EnumSource.py  JsonEx.py  PathEx.py  RegularExpression.py  SubprocessEx.py  TextwrapEx.py  Types.py
Libraries/Python/Common_Foundation/src/Common_Foundation/Shell/: All.py  CommandVisitor.py  Commands.py  LinuxShell.py  MacOsShell.py  Shell.py  WindowsShell.py
Libraries/Python/Common_Foundation/src/Common_Foundation/Shell/Impl/: LinuxShellImpl.py
Libraries/Python/Common_Foundation/src/Common_Foundation/SourceControlManagers/: All.py  GitSourceControlManager.py  MercurialSourceControlManager.py  SourceControlManager.py  UpdateMergeArgs.py
Libraries/Python/Common_Foundation/src/Common_Foundation/Streams/: Capabilities.py  DoneManager.py  StreamDecorator.py  TextWriter.py
Libraries/Python/Common_Foundation/src/Common_Foundation/Streams/UnitTests/: StreamDecorator_UnitTest.py
Libraries/Python/Common_Foundation/src/Common_Foundation/TestHelpers/: StreamTestHelpers.py
RepositoryBootstrap/: ActivateActivity.py  Configuration.py  Constants.py  DataTypes.py  DynamicPluginArchitecture.py  InitializeRepository.py  SetupActivity.py
(+345 files in other folders)
