[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Common_Foundation"
description = "Functionality used in the implementation of the Common_Foundation repository (with no external dependencies outside of python)."
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "__version__.VERSION"}
